src/objects/SPE_SPEPlan__c.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>ALL PROJECT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AF AWCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL VODAFONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL M4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL PLUS CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ OOREDOO ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ.ORASCOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA TELECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI MOVIL ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELEFONICA PANAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CTI MOVIL 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CABLEVISION NGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PERSONAL 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PDH/SDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CLARO ARGENTINA SWAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TECO TDM EVOLUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM ORANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VODAFONE AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU DOT DTRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU NBN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G OLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT NETCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT CALDERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT TMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT A1 AUSTRIA CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT ORANGE AUSTRIA CARE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_Pattern__c</fullName>
        <description>This field holds the data for monthly/yearly child radio options to check which option is chosen.</description>
        <label>Recurrence Pattern</label>
        <picklist>
            <picklistValues>
                <fullName>DayPerMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeekPerMonth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DayPerYear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeekPerYear</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recurrence_frequency_type__c</fullName>
        <description>Used in selection page of PI upload recurrence. It has two values- Monthly and Yearly.</description>
        <label>Recurrence frequency type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SPEDomain__c</fullName>
        <label>SPE Domain</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPEId__c</fullName>
        <displayFormat>SPE-Plan-{0000}</displayFormat>
        <label>SPE Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SPEPlanName__c</fullName>
        <label>SPE Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPEScoringTemplate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>SPE Scoring Template</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6)</booleanFilter>
            <filterItems>
                <field>SPE_ScoringTemplate__c.Stage__c</field>
                <operation>equals</operation>
                <value>Pilot, Published</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>SPE Key Users</value>
            </filterItems>
            <filterItems>
                <field>SPE_ScoringTemplate__c.Stage__c</field>
                <operation>equals</operation>
                <value>Published,Pilot</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>SPE User</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator</value>
            </filterItems>
            <filterItems>
                <field>SPE_ScoringTemplate__c.Stage__c</field>
                <operation>equals</operation>
                <value>Published, Pilot</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SPE_ScoringTemplate__c</referenceTo>
        <relationshipLabel>SPE Plans</relationshipLabel>
        <relationshipName>SPE_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SPETemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SPE Template</label>
        <referenceTo>SPE_SPETemplate__c</referenceTo>
        <relationshipLabel>SPE Plans</relationshipLabel>
        <relationshipName>SPE_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>See SPE Process Guidelines</inlineHelpText>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obsolete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <inlineHelpText>When during the period the SPE Tracker will be computed</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <label>Start Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <label>Start Year</label>
        <picklist>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2021</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2022</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2023</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2024</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2025</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2026</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2027</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2028</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2029</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2030</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2031</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2032</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <picklist>
            <picklistValues>
                <fullName>--None--</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SEE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SurveyExecutionBeforeIndays__c</fullName>
        <inlineHelpText>Provide the number of days before the Start Date when the survey will be triggered</inlineHelpText>
        <label>Survey Due Date (In Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveyFooter__c</fullName>
        <label>Survey Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SurveyHeader__c</fullName>
        <label>Survey Header</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SurveyReminderBeforeExecutionDate__c</fullName>
        <inlineHelpText>Provide the number of days before the Start Date when the reminder email will go out</inlineHelpText>
        <label>Survey Reminder Before Execution (InDay)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Shut_Down__c</fullName>
        <defaultValue>&quot;1 day before the Day of Start Date based on Frequency as default&quot;</defaultValue>
        <label>Survey Shut Down</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Tracker_Score__c</fullName>
        <label>Total Tracker Score</label>
        <summarizedField>SPE_SPETracker__c.Avg_Tracker_SPE_Score__c</summarizedField>
        <summaryForeignKey>SPE_SPETracker__c.SPEPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tracker_Count__c</fullName>
        <label>Tracker Count</label>
        <summaryForeignKey>SPE_SPETracker__c.SPEPlan__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Upload_Day__c</fullName>
        <label>Upload Day</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vintage_Date__c</fullName>
        <label>Vintage Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vintage__c</fullName>
        <label>Vintage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week_Count__c</fullName>
        <description>It holds week of any month</description>
        <label>Week Count</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Day_Name_of_Upload_Week__c</fullName>
        <label>Yearly Day Name of Upload Week</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Yearly_Week_Count__c</fullName>
        <description>This field is used for Yearly Recurrence pattern.</description>
        <label>Yearly Week Count</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fourth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>identifierParam__c</fullName>
        <label>identifierParam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SPE Plan</label>
    <nameField>
        <displayFormat>SPE - {00000}</displayFormat>
        <label>SPE Plan Sequential ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE Plans</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>SPE2_Buffer_Days_Validation</fullName>
        <active>true</active>
        <description>Buffer Days should be greater than or equal to 1</description>
        <errorConditionFormula>OR(ISBLANK(Additional_Days__c),Additional_Days__c &lt;= 0)</errorConditionFormula>
        <errorMessage>Buffer Days should be greater than or equal to 1</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SPE_special_character_not_allowed</fullName>
        <active>true</active>
        <description>Name should be start with Alphanumeric only</description>
        <errorConditionFormula>NOT(REGEX(SPEPlanName__c, &quot;[a-zA-Z 0-9]{1}.*&quot;))</errorConditionFormula>
        <errorMessage>Name should be start with Alphanumeric only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Scoring_Template_Stage_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL(SPEScoringTemplate__r.Stage__c,&apos;Draft&apos;)  ||   ISPICKVAL(SPEScoringTemplate__r.Stage__c,&apos;Obsolete&apos;)</errorConditionFormula>
        <errorDisplayField>SPEScoringTemplate__c</errorDisplayField>
        <errorMessage>Please Link Published or Pilot Scoring Template</errorMessage>
    </validationRules>
</CustomObject>